# do-something

./: Cargo.toml  LICENSE  README.md  demo.tape  dosomething.json  ds.json
do-something-skill/: SKILL.md
src/: cli.rs  command.rs  commands.rs  commands2.rs  config.rs  dir.rs  do_something.rs  ds_file.rs  env.rs  group.rs  help.rs  lib.rs  main.rs  runner.rs  tui.rs
src/tui/: help.rs
tests/fixtures/: aliases-and-group-mode.json  environments.json  full.json  root-and-scoping.json  scoping.json
