[package]
name = "do-something"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
color-eyre = "0.6.5"
crossterm = "0.29.0"
dotenvy = "0.15.7"
git2 = "0.20.2"
glob = "0.3.3"
serde = {version= "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
shell-escape = "0.1.5"
shellexpand = "3.1.1"

[[bin]]
name = "ds"
path = "src/main.rs"
