[package]
name = "do-something"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Durgé Seerden"]
description = "A simple yet powerful command runner."
repository = "https://github.com/dsdeur/do-something"


[dependencies]
anyhow = "1.0.100"
color-eyre = "0.6.5"
crossterm = "0.29.0"
dotenvy = "0.15.7"
git2 = "0.20.2"
glob = "0.3.3"
nucleo = "0.5.0"
ratatui = "0.29.0"
serde = {version= "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
shell-escape = "0.1.5"
shellexpand = "3.1.1"
tui-input = "0.14.0"

[[bin]]
name = "ds"
path = "src/main.rs"
